frontend: add footer

--- a/src/whisper_api/frontend/static/index.html
+++ b/src/whisper_api/frontend/static/index.html
@@ -26,4 +26,9 @@
   <script src="script.js"></script>
 </body>
 
+<footer>
+  <p id="footer">Check out the project on <a href="https://github.com/MayNiklas/whisper_api.git"
+      target="_blank">Github</a></p>
+</footer>
+
 </html>
