--- a/src/whisper_api/frontend/static/index.html
+++ b/src/whisper_api/frontend/static/index.html
@@ -22,7 +22,8 @@
     <h2>Transcription:</h2>
     <div id="result"></div>
   </div>
-  <button type="button" id="cleanOutputBtn" onclick="cleanOutput()">Clean Output</button>
+  <button type="button" id="cleanOutputBtn" onclick="cleanOutput()">Clean output</button>
+  <button type="button" id="downloadSrtBtn" onclick="downloadSrt()">Download transcription as .srt</button>
   <script src="script.js"></script>
 </body>
 
