--- a/src/whisper_api/frontend/static/index.html
+++ b/src/whisper_api/frontend/static/index.html
@@ -23,12 +23,9 @@
     <div id="result"></div>
   </div>
   <div style="display: flex; justify-content: center; gap: 20px; width: 100%;">
-    <button type="button" id="cleanOutputBtn" onclick="cleanOutput()"
-      style="flex: 1 1 150px; padding: 10px; height: 50px;">Clean
-      output</button>
-    <button type="button" id="downloadSrtBtn" onclick="downloadSrt()"
-      style="flex: 1 1 150px; padding: 10px; height: 50px;">Download
-      transcription as .srt</button>
+    <button type="button" id="cleanOutputBtn" onclick="cleanOutput()" class="action-btn">Clean output</button>
+    <button type="button" id="downloadSrtBtn" onclick="downloadSrt()" class="action-btn">Download transcription
+      as .srt</button>
   </div>
   <script src="script.js"></script>
 </body>
