change button text to fit small screens

--- a/src/whisper_api/frontend/static/index.html
+++ b/src/whisper_api/frontend/static/index.html
@@ -24,8 +24,7 @@
   </div>
   <div style="display: flex; justify-content: center; gap: 20px; width: 100%;">
     <button type="button" id="cleanOutputBtn" onclick="cleanOutput()" class="action-btn">Clean output</button>
-    <button type="button" id="downloadSrtBtn" onclick="downloadSrt()" class="action-btn">Download transcription
-      as .srt</button>
+    <button type="button" id="downloadSrtBtn" onclick="downloadSrt()" class="action-btn">Download .srt file</button>
   </div>
   <script src="script.js"></script>
 </body>
